ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes
2011-08-04 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Fixed regressions in the the implementation of 'libDistributedClustering'

2011-08-03 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Corrected a bug in the building system that prevented to compile
	the CGAL support properly

	* Version renamed to 2.1

2011-07-13 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added clusters merge using last partition sequences on aggregative
	refinement

	* Solved a bug when generating the partition using the sequences merge

	* THIS VERSION WAS USED IN THE ICPADS PAPER *

2011-05-21 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a bug when renaming nodes that didn't expand

2011-05-16 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added copy of input .row files when clustering Paraver traces

	* Changed SVN keywords. Added 'Id'

	* Workaround to parse traces with incoherent number of communicators

	* Build SVN numbering changed again :D

2011-05-16 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Workaround to avoid problematic Bursts when changing HWC groups

	* Generation sequences of the last partition when applying refinement

	* Added better support to control the SVN revision

	* Cleaned headers and SVN keywords for all files

	* Solved a bug in the generation of step traces when applying the
	clustering refinement. It caused that the intermediate trace had a 
	different naming of the clusters

	* Solved a bug when seting the actual number of clusters different to
	noise in a partition. It caused the plotting manager to generate a
	plot with one more cluster that the actual number

2011-05-15 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Solved a bug in the merge step that forced to capture discarded
	leaves
